ELearning and code refactoring

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/checkbox": "^0.5.9",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "@twotalltotems/react-native-otp-input": "1.3.7",
@@ -50,16 +51,20 @@
     "react-native-collapsible": "^1.6.0",
     "react-native-dotenv": "^3.3.1",
     "react-native-element-dropdown": "^1.5.7",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-image-header-scroll-view": "^1.0.0",
+    "react-native-image-modal": "^2.0.4",
     "react-native-keyboard-accessory": "^0.1.16",
     "react-native-maps": "0.29.4",
     "react-native-masked-text": "^1.13.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^13.0.0",
     "react-native-modal-dropdown": "^1.0.2",
+    "react-native-pager-view": "^5.4.15",
     "react-native-parallax-header": "^1.1.4",
     "react-native-parallax-scroll-view": "^0.21.3",
+    "react-native-progress": "^5.0.0",
     "react-native-ratings": "^8.1.0",
     "react-native-render-html": "^6.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
@@ -70,6 +75,7 @@
     "react-native-sticky-parallax-header": "^0.4.1",
     "react-native-svg": "^12.1.1",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-tab-view": "^3.1.1",
     "react-native-user-avatar": "^1.0.8",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
