--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tab-view": "^3.1.1",
     "react-native-user-avatar": "^1.0.8",
+    "react-native-video": "^5.2.0",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
     "yup": "^0.32.11"
