--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-splash-screen": "^0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.3",
+    "expo-video-thumbnails": "^6.2.0",
     "expo-web-browser": "~10.1.0",
     "fiction-expo-restart": "^1.1.0",
     "formik": "^2.2.9",
