Exam, article, sticker

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "~44.0.0",
     "expo-apple-authentication": "~4.1.0",
     "expo-auth-session": "~3.5.0",
+    "expo-av": "~10.2.0",
     "expo-blur": "~11.0.0",
     "expo-camera": "~12.1.0",
     "expo-checkbox": "~2.0.0",
@@ -58,6 +59,7 @@
     "react-native-image-modal": "^2.0.4",
     "react-native-keyboard-accessory": "^0.1.16",
     "react-native-maps": "0.29.4",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-masked-text": "^1.13.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^13.0.0",
@@ -67,7 +69,7 @@
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-progress": "^5.0.0",
     "react-native-ratings": "^8.1.0",
-    "react-native-render-html": "^6.3.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
@@ -78,7 +80,6 @@
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tab-view": "^3.1.1",
     "react-native-user-avatar": "^1.0.8",
-    "react-native-video": "^5.2.0",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
     "yup": "^0.32.11"
